# merlin-compiler

./: LICENSE  README  jenkinsut  merlin_setting.sh
trunk/: .clang-format  .clang-tidy  .dockerignore  CMakeLists.txt  Makefile  PREP.md  README.md  entrypoint.sh  filter_warnings.py  gen_version.sh  log  make_dist.pl
trunk/ami/: README.md  generate_ami.sh  setup_ami_aws.sh
trunk/clang-tidy/: run.py
trunk/cmake/Modules/: FindClang.cmake  FindGoogleTest.cmake  FindLLVM.cmake
trunk/cpplint/: run.py
trunk/docker/: Dockerfile  Dockerfile-base  Dockerfile-nimbix  common.bash  docker-build.sh  docker-clean.sh  docker-push.sh  docker-run.sh  merlin-base_dockerscript.sh
trunk/hooks/: pre-commit
trunk/install_env/: install_env.pl
trunk/legacy/: CMakeLists.txt  set_root.sh
trunk/legacy/tools/ir/: CMakeLists.txt  PolyModel.cpp  PolyModel.h  pltf_annotate.cpp  pltf_annotate.h  tldm_annotate.cpp  tldm_annotate.h
trunk/legacy/tools/parsers/: CMakeLists.txt
trunk/legacy/tools/utils/: CMakeLists.txt
trunk/mars-gen/default/: directive_cmost_bit_alphadata.xml  directive_cmost_hls_alphadata.xml  directive_empty.xml  directive_mars_basic.xml  directive_mars_bit_alphadata.xml  directive_mars_sim.xml  directive_mars_sim_alphadata.xml  platform_info.xml  release_directive_mars_basic.xml
trunk/mars-gen/drivers/cmost_headers/: __merlin_timer.c  __merlin_timer.h  cmost.c  cmost.h  cmost.h_c
trunk/mars-gen/drivers/code_transform/: merlin_stream.c  merlin_stream.h
trunk/mars-gen/lib/merlin/: __merlin_malloc.h  __merlin_math.c  __merlin_math.h  builtin.list  cmost.h  merlin_stream.c  merlin_stream.h
trunk/mars-gen/scripts/: add_platform.txt
trunk/mars-gen/scripts/frontend/: copy_head.pl  merlin_frontend_top.pl
trunk/mars-gen/scripts/lib/: global_var.pm  merlin.pm  message.pm
trunk/mars-gen/scripts/merlin_flow/: add_extern.pl  auto_dse.pl  export_c2cl.pl  export_host.pl  export_kernel.pl  export_lib_gen.pl  export_preprocess.pl  final_code_gen.pl  frontend_pass.pl  mars_summarize.pl  memcpy_type_fix.pl  merlin_backend.pl  merlin_backend_top.pl  merlin_create_dir.pl  merlin_flow_opt.pl  merlin_flow_start_new.py  merlin_flow_top.pl  preprocess.py  preprocess_remove_directive.py  remote_exec.pl  set_internal_platform.pl
trunk/mars-gen/scripts/merlincc/: merlincc_top.pl
trunk/mars-gen/scripts/midend/: merlin_midend_top.pl
trunk/mars-gen/scripts/msg_report/: merlin_run.py  merlin_run.pyo  msg_report.py  perf_est.pl
trunk/mars-gen/scripts/project/: check_design_date.py  copy_project_file.py  create_project.py  parse_project_command.pl  reverse_create_project.py  revert_project.py
trunk/mars-gen/scripts/sdaccel/: Makefile  analyze_adb_xml.pl  analyze_profile.py  copy_vendor_file.pl  kernel_gen.pl  makefile_gen.pl  preprocess.pl  profile.pl  report_gen.pl  report_screen.pl  run.pl  sdaccel_run_flow.pl  summary_bit.pl  summary_hls.pl  test_xilinx_license.pl  vecdor_cycles_extract.pl  vivado_extract.pl  vivado_hls.tcl  xilinx_env_gen.pl
trunk/mars-gen/tools/: CMakeLists.txt
trunk/mars-gen/tools/add_header/: addheader.py  xilinx_c.txt  xilinx_script.txt
trunk/mars-gen/tools/mars_flow/: CMakeLists.txt  display.cpp  license.h  mars_create_project_x64.cpp  mars_env_load.cpp  mars_exec_cloud.cpp  mars_flow_cloud.cpp  mars_flow_x64.cpp  mars_install.cpp  mars_opt_wrapper.cpp  marscc.cpp  merlin_backend.cpp  merlin_driver.cpp  merlin_frontend.cpp  merlin_license.cpp  merlin_midend.cpp  merlin_safe_exec.cpp  merlincc.cpp  merlinprof.cpp
trunk/mars-gen/tools/mars_perl/: CMakeLists.txt  enc.cpp  key  mars_perl.cpp  test.pl.org
trunk/mars-gen/tools/mars_test/: CMakeLists.txt  mars_aws.cpp  mars_cloud_test.cpp  mars_create_project_warning.cpp  mars_flow_warning.cpp  mars_test.cpp
trunk/mars-gen/tools/mcheck/: CMakeLists.txt  Makefile  llvm-merlin.cmake  mcheck.cpp  mdiag.cpp  mdiag.h
trunk/mars-gen/tools/merlin_core/: CMakeLists.txt  merlin_core
trunk/mars-gen/tools/mrefactor/: CMakeLists.txt  Makefile  mrefactor.cpp
trunk/mars-gen/tools/msg_report/: CMakeLists.txt  merlin_msg_report.cpp
trunk/optimizers/: CMakeLists.txt
trunk/optimizers/autodse/: CMakeLists.txt
trunk/optimizers/autodse/checks/: .pylintrc  mypy.ini  req_py3.txt  run_lint.sh  run_type.sh
trunk/optimizers/autodse/configs/: design_space_list.json
trunk/optimizers/autodse/libs/: opentuner
trunk/optimizers/autodse/scripts/: ds_proc_applier.py  ds_proc_builder.py  ds_proc_profiler.py  dse.py  dse_cache.py  dse_cache_perf_intel.py  dse_cache_perf_xilinx.py  dse_engine.py  (+11 more)
trunk/optimizers/systolic/: ChangeLog.md
trunk/regression_test/: LICENSE.txt  README.md
trunk/regression_test/configuration/: bugzilla.list  bugzilla_fast.list  bugzilla_orig.list  bugzilla_unit.list  case.list  checkin_rerun.list  cmd_test.list  commandline.list  configuration.xml  configuration_baidu_sda.xml  configuration_one.xml  configuration_pkg.xml  configuration_utilization.xml  machsuite_set2.list  mcc_common.mk  merlin_flow.list  message.list  msg_report_test.list  one_hour_test.xml  one_hour_test_blind.xml  one_hour_test_fast.xml  one_hour_test_pkg.xml  one_hour_test_pkg_174.xml  onehour_x.list  onehour_x_fast.list  opt_hls.list  qor.list  qor_suite.list  regression.list  rodinia.list  rodinia_fast.list  test_cases_chstone_simple.list  test_cases_coverage.list  test_cases_machsuite_opt_xilinx.list  test_cases_machsuite_simple.list  test_cases_machsuite_simple_xilinx.list  test_cases_org_v2.list  unit_test.list  unit_test.xml  xfopencv.list  (+1 more)
trunk/regression_test/script/: add_case_to_svn.csh  scp_output_package.csh
trunk/release_package/: make_dist.pl
trunk/set_env/: env.csh  env.sh  sdx_env  set_env.csh  set_env.sh  set_root.csh  set_root.sh  setup_dependent.csh  vitis_env
trunk/source-opt/tools/: CMakeLists.txt  add_pass.txt  cake.pl
trunk/stat_tool/: count_testcases.py  line_stats.sh  list_all_file.sh
trunk/test/: common.bash  make-rpt  regression.sh  run-test-seq.sh  run-test.sh  test-template.mk
trunk/third_party_misc/: 0001-Our-own-patch-to-v0.11.4.14.patch  README.md  build-rose  llvm-3.1.patch
(+8648 files in other folders)
