include_directories(
    "${Boost_INCLUDE_DIRS}"
    "${TOOLS_TOP}/ir"
    "${ESLOPT_TOP}/tools/parsers/src"
    "${MARS_TOP}/tools/include"
    "${MARS_GEN_TOP}/lib/flexlm"
    "${ROSE_ROOT_DIR}/include/rose"
    "${RAPIDJSON_ROOT_DIR}")

# add the executable project first so that
# the subsequent dependencies can be added
add_subdirectory(rose)
add_subdirectory(mars_opt)

# add all dependent projects
add_subdirectory(add_pragma_kernel)
add_subdirectory(altera_postprocess)
add_subdirectory(altera_preprocess)
add_subdirectory(array_linearize)
add_subdirectory(array_delinearize)
add_subdirectory(auto_dim_interchange)
add_subdirectory(auto_func_inline)
add_subdirectory(auto_parallel_insertion)
add_subdirectory(bitwidth_opt)
add_subdirectory(coarse_parallel)
add_subdirectory(coarse_pipeline)
add_subdirectory(comm_opt)
add_subdirectory(constant_propagate)
add_subdirectory(data_transfer_gen)
add_subdirectory(detect_non_static_pointer)
add_subdirectory(detect_pointer_comparison)
add_subdirectory(detect_pointer_type_cast)
add_subdirectory(detect_multidim_pointer)
#add_subdirectory(data_reuse)
#add_subdirectory(data_stream)
add_subdirectory(final_code_gen)
add_subdirectory(function_inline)
#add_subdirectory(function_outline)
add_subdirectory(gen_hierarchy)
add_subdirectory(gen_token_id)
add_subdirectory(gen_access_range_intrinsic)
add_subdirectory(id_update)
add_subdirectory(ir)
add_subdirectory(input_checker)
add_subdirectory(interface_convert_bool)
add_subdirectory(interface_port_renaming)
add_subdirectory(interface_transform)
add_subdirectory(kernel_pragma_gen)
add_subdirectory(kernel_separate)
add_subdirectory(kernel_wrapper)
#add_subdirectory(loop_distribute)
add_subdirectory(loop_flatten)
add_subdirectory(loop_parallel)
add_subdirectory(loop_tiling)
add_subdirectory(lower_cpp)
add_subdirectory(lower_separate)
add_subdirectory(memory_burst)
add_subdirectory(memory_partition)
add_subdirectory(channel_partition)
add_subdirectory(memory_reduce)
add_subdirectory(midend_preprocess)
#add_subdirectory(msg_test)
add_subdirectory(dependency_resolve)
add_subdirectory(stream_prefetch)
#add_subdirectory(opencl_transfer_gen)
#add_subdirectory(openmp_parse)
add_subdirectory(performance_estimation)
add_subdirectory(postwrap_process)
add_subdirectory(synthesis_check)
add_subdirectory(preprocess)
add_subdirectory(program_analysis)
add_subdirectory(reduction)
add_subdirectory(reduction_general)
add_subdirectory(remove_simple_pointer_alias)
add_subdirectory(replace_exp_visitor)
add_subdirectory(simple_dce)
add_subdirectory(stream_model)
add_subdirectory(struct_decompose)
add_subdirectory(structural_func_inline)
add_subdirectory(line_buffer)
add_subdirectory(detect_library_calls)
